[tool.poetry]
name = "placeapi-fitness-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "placeapi_fitness_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.116.1"}
pyngrok = "^7.3.0"
googlemaps = "^4.10.0"
aiohttp = "^3.12.15"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
